# zillion

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  404.html  AUTHORS.md  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev_config.yml  docker-compose-nlp.yml  docker-compose.test.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml
api/: index.html
contributing/: index.html
docs/: build_markdown.py  mkdocs_index.md  readme.md  requirements.txt
docs/markdown/: contributing.md  readme_badges.md  readme_contents.md  readme_docs.md  readme_how_to_contribute.md  readme_intro.md  readme_toc.md
docs/mkdocs/: api.md  index.md  zillion.configs.md  zillion.core.md  zillion.datasource.md  zillion.dialects.md  zillion.field.md  zillion.model.md  zillion.nlp.md  zillion.report.md  zillion.scripts.md  zillion.sql_utils.md  zillion.version.md  zillion.warehouse.md
docs/source/: conf.py  index.rst  zillion.configs.rst  zillion.core.rst  zillion.rst  (+6 more)
examples/: baseball_warehouse.json  example_wh_config.json  minimal_example.py  sample_config.yaml
search/: search_index.json
sqlaw/: configs.py  core.py  report.py  sql_utils.py  utils.py  warehouse.py
tests/: adhoc_ds_config.json  common.sqlite.sql  conftest.py  create_testdb2.py  dma_zip.csv  dma_zip.html  dma_zip.json  dma_zip.xlsx  example_wh_config.json  performance.py  pytest.ini  run_report.py  sample_config.yaml  test.py  test_adhoc_ds_config.json  test_agent.py  test_config.json  test_config.yaml  test_core.py  test_datasource_config.json  test_duckdb.py  test_duckdb_wh_config.json  test_example_wh_config.py  test_include_wh_config.json  test_mysql.py  test_mysql_ds_config.json  test_nlp.py  test_performance.py  test_postgres.py  test_postgres_ds_config.json  test_postgresql.py  test_postgresql_ds_config.json  test_reports.py  test_scripts.py  test_sqlite_ds_config.json  test_table_config.json  test_utils.py  test_wh_config.json  testdb  testdb.sql  (+9 more)
zillion/: __init__.py  agent.py  configs.py  core.py  datasource.py  field.py  model.py  nlp.py  report.py  sql_utils.py  version.py  warehouse.py
zillion.configs/: index.html
zillion.core/: index.html
zillion.datasource/: index.html
zillion.dialects/: index.html
zillion.field/: index.html
zillion.model/: index.html
zillion.nlp/: index.html
zillion.report/: index.html
zillion.scripts/: index.html
zillion.sql_utils/: index.html
zillion.version/: index.html
zillion.warehouse/: index.html
(+25 files in other folders)
