[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zillion"
description = "Make sense of it all. Data modeling and analytics with a sprinkle of AI."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "totalhack" }]
dynamic = ["version"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "climax~=0.4.0",
  "lxml>=4.9.3",
  "marshmallow==3.21.0; python_version >= \"3.12\"",
  "marshmallow==3.20.1; python_version < \"3.12\"",
  "networkx>=3.0",
  "ordered-set~=4.1.0",
  "pandas>=2.0.0,<3; python_version >= \"3.13\"",
  "pandas>=1.1,<3; python_version < \"3.13\"",
  "numpy>=1.26,<2",
  # pandas extras you listed:
  "openpyxl>=3.0.7,<3.1.1",
  "pymysql~=1.0.2",
  "pyyaml>=6.0",
  # Required by stopit
  "setuptools>=65",
  "simplejson~=3.17.0",
  "stopit~=1.1.2",
  "sqlalchemy>=1.4.49,<2; python_version >= \"3.12\"",
  "sqlalchemy>=1.3,<2; python_version < \"3.12\"",
  "sqlparse~=0.3.1",
  "tabulate~=0.8.7",
  "tlbx~=0.1.22",
  "xlrd~=1.2.0",
]

[project.optional-dependencies]
mysql = ["pymysql~=1.0.2"]
postgres = ["psycopg2-binary~=2.9.5"]
duckdb = [
  "duckdb==0.7.1; python_version == '3.9'",
  "duckdb-engine==0.7.*; python_version == '3.9'",
  "duckdb>=0.7.1,<1.0; python_version >= '3.10' and python_version < '3.12'",
  "duckdb-engine>=0.7,<0.10; python_version >= '3.10' and python_version < '3.12'",
  "duckdb>=1.0.0; python_version >= '3.12'",
  "duckdb-engine>=0.10,<1.0; python_version >= '3.12'",
]
nlp = [
  "langchain==0.0.115",
  "openai==0.27.2",
  "tiktoken==0.3.3",
  "qdrant-client==1.1.3",
]
dev = [
  "black",
  "pre-commit",
  "pylint>=3.0",
  "pytest==7.1.2",
  "pytest-xdist==3.1.0",
  "twine>=5",
  "wheel",
  "mkdocs==1.1.2",
  "mkdocs-material==5.2.1",
  "mkdocs-material-extensions==1.0",
  "mkautodoc==0.2.0",
  "psycopg2-binary>=2.9.5",
  "jinja2<3.1.0",
]

[project.urls]
Homepage = "https://github.com/totalhack/zillion"
Source = "https://github.com/totalhack/zillion"
Issues = "https://github.com/totalhack/zillion/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["zillion*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.dynamic]
version = { attr = "zillion.version.__version__" }
